Add PHP-FPM exporter support
Signed-off-by: Wiebe Verweij <wiebe.verweij@moxio.com>

--- a/data/defaults.yaml
+++ b/data/defaults.yaml
@@ -320,3 +320,11 @@ prometheus::apache_exporter::package_ensure: 'latest'
 prometheus::apache_exporter::package_name: 'apache_exporter'
 prometheus::apache_exporter::user: 'apache-exporter'
 prometheus::apache_exporter::version: '0.7.0'
+prometheus::php_fpm_exporter::scrape_uri: 'tcp://127.0.0.1:9000/status'
+prometheus::php_fpm_exporter::download_url_base: 'https://github.com/hipages/php-fpm_exporter/releases'
+prometheus::php_fpm_exporter::extra_groups: []
+prometheus::php_fpm_exporter::group: 'php-fpm-exporter'
+prometheus::php_fpm_exporter::package_ensure: 'latest'
+prometheus::php_fpm_exporter::package_name: 'php-fpm_exporter'
+prometheus::php_fpm_exporter::user: 'php-fpm-exporter'
+prometheus::php_fpm_exporter::version: '1.1.1'
